<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.maizaga.sync.viewmodels.MainViewModel" />
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity">

        <RadioGroup
            android:id="@+id/fileSelector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:onCheckedChanged="@{(radioGroup, id) -> viewModel.onCheckedChange(radioGroup, id)}"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/initial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sessions_initial"
                android:checked="true"
                app:buttonTint="@color/colorAccent" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/edited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sessions_edited"
                app:buttonTint="@color/colorAccent" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/deleted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sessions_deleted"
                app:buttonTint="@color/colorAccent" />
        </RadioGroup>

        <Button
            android:id="@+id/importButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:onClick="@{() -> viewModel.importJson()}"
            android:text="@string/import_json"
            app:layout_constraintTop_toBottomOf="@id/fileSelector" />

        <Button
            android:id="@+id/dumpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:onClick="@{() -> viewModel.dbDump()}"
            android:text="@string/db_dump"
            app:layout_constraintTop_toBottomOf="@id/importButton" />

        <TextView
            android:id="@+id/importStatusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/import_status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dumpButton" />

        <TextView
            android:id="@+id/updatedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@{viewModel.updated}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/importStatusText" />

        <TextView
            android:id="@+id/removedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@{viewModel.removed}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/updatedText" />

        <TextView
            android:id="@+id/insertedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@{viewModel.inserted}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/removedText" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.progress ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/insertedText" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>